<resources>
    <string name="app_name">Firebase</string>

    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm">Confirm</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="sign_up">New user? Sign up</string>
    <string name="sign_in">Already have an account? Sign in</string>

    <string-array name="filter_options">
        <item>All</item>
        <item>Confirmed</item>
        <item>Unconfirmed</item>
    </string-array>
</resources>